@@ -11,6 +11,11 @@ Package author: Andy Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-02-07
+2012-05-11 Andy Salnikov
+- added code to dump new type Princeton::ConfigV3
+- added code to dump new type EvrData::ConfigV6
+
 Tag: V00-02-06
 2012-03-27 Andy Salnikov
 - added code to dump new type BldDataEBeamV3
